--- a/style.css
+++ b/style.css
@@ -7,13 +7,13 @@
             line-height: 1.6;
             color: #333;
         }
-        h1 {
+      .h1 {
             border-bottom: 2px solid #0366d6;
             padding-bottom: 10px;
         }
-        a {
+      .a {
             color: #0366d6;
         }
-        .section {
+      .section {
             margin-bottom: 30px;
         }
